--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white size-footer" >
+				<p class="text-center white" >
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
