Changement Alt des images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="index, follow">
     <meta
       name="keywords"
-      content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
+      content="site web, graphiste, agence design lyon"
     />
     <meta
       name="description"
@@ -97,7 +97,7 @@
               <img
                 src="img/logo.webp"
                 class="center-block image-resize-mode logo"
-                alt="La chouette agence, agence web paris, création logo paris"
+                alt="La chouette agence, agence web design, création logo Lyon"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 La chouette agence.
@@ -271,7 +271,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.webp"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="Refonte du site web d'un journal de Lyon"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -292,7 +292,7 @@
                 ><img
                   src="img/2.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="Création d'un site web design pour photographes"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -314,7 +314,7 @@
                 ><img
                   src="img/3.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="Création d'un site web design pour voyageur"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -334,7 +334,7 @@
                 ><img
                   src="img/4.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="Création d'un site web design pour agence de mariage"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
