Supression ligne css "device"

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-    <script src="./js/jquery-2.1.0.js" defer></script>
-    <script src="./js/bootstrap.js" defer></script>
-    <script src="./js/blocs.js" defer></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js" defer></script>
+    
 
     <title>La Chouette Agence</title>
 
@@ -428,6 +424,11 @@
       >
       <!-- Footer - bloc-8 END -->
     </div>
+    <script src="./js/jquery-2.1.0.js" defer></script>
+    <script src="./js/bootstrap.js" defer ></script>
+    <script src="./js/blocs.js" async></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js" async ></script>
     <!-- Principal conteneur END -->
   </body>
 </html>
