--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="robots" content="index, follow">
-    <meta
-      name="keywords"
-      content="site web, graphiste, agence design lyon"
-    />
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="site web, graphiste, agence design lyon" />
     <meta
       name="description"
       content="Créer votre propre site web design avec la chouette agence à Lyon. Un accompagnement personnalisé pour la création de vos futur projet."
@@ -23,12 +20,10 @@
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script src="./js/jquery-2.1.0.js" defer></script>
-    <script src="./js/bootstrap.js" defer ></script>
+    <script src="./js/bootstrap.js" defer></script>
     <script src="./js/blocs.js" defer></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js" defer ></script>
-
-    
+    <script src="./js/gmaps.js" defer></script>
 
     <title>La Chouette Agence</title>
 
@@ -49,6 +44,8 @@
                   src="img/la-chouette-agence.webp"
                   alt="paris web design logo agence web meilleure agence"
                   class="chouette-agence"
+                  width="321"
+                  height="60"
               /></a>
 
               <button
@@ -430,7 +427,7 @@
       >
       <!-- Footer - bloc-8 END -->
     </div>
-  
+
     <!-- Principal conteneur END -->
   </body>
 </html>
